update explore style

--- a/explore/web/html/index.html
+++ b/explore/web/html/index.html
@@ -18,7 +18,8 @@
 <link href='./styles/screen.min.3cfaf877873801d20836e07f7d60c446e1a81bbe338985c65355362c37f116b2.css' rel="stylesheet" media="screen" integrity="sha256-PPr4d4c4AdIINuB/fWDERuGoG74ziYXGU1U2LDfxFrI=" />
 <link href='./styles/print.min.9c7d3c118c66de77e439d080b5fd628d6a5ed904dcaccf395285fffb0d97feb6.css' rel="stylesheet" media="print" integrity="sha256-nH08EYxm3nfkOdCAtf1ijWpe2QTcrM85UoX/&#43;w2X/rY=" />
 
-
+<!-- Custom styles -->
+<link href='./styles/custom.css' rel="stylesheet" />
     
 
 
