--- a/projects/web/html/index.html
+++ b/projects/web/html/index.html
@@ -83,14 +83,14 @@
 
             <div class="row">
                 <div class="col-sm-10 offset-sm-1 blurb">
-		  <ul class="pinned list-inline "><center><img src="ring.gif" /></center></ul>
+		  <ul class="pinned list-inline "><center><img src="/projects/ring.gif" /></center></ul>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-sm-10 offset-sm-1 blurb">
                     <h5>Recent</h5>
-		    <ul class="list-group recent list-unstyled"><center><img src="ring.gif" /></center></ul>
+		    <ul class="list-group recent list-unstyled"><center><img src="/projects/ring.gif" /></center></ul>
                 </div>
             </div>
           </div>
@@ -114,6 +114,6 @@
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
         ga('create', 'UA-70478210-1', 'auto');ga('send', 'pageview');
     </script><script>$(document).ready( function(){   $('.display').click(function() {     $('.login').show();  })});</script>
-    <script src="/projects/e.js?v=15"></script>
+    <script src="/projects/e.js?v=20"></script>
 </html>
 
