--- a/projects/web/html/search.html
+++ b/projects/web/html/search.html
@@ -93,6 +93,6 @@
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
         ga('create', 'UA-70478210-1', 'auto');ga('send', 'pageview');
     </script><script>$(document).ready( function(){   $('.display').click(function() {     $('.login').show();  })});</script>
-    <script src="/search/e.js?v=21"></script>
+    <script src="/projects/e.js?v=21"></script>
 </html>
 
