--- a/projects/web/html/index.html
+++ b/projects/web/html/index.html
@@ -73,7 +73,7 @@
 	  <div class="main">
 	    <div class="row">
 	      <div class="col-sm-5 offset-sm-1">
-		  <h5><b>Explore projects in the Micro ecosystem</b></h5>
+		  <h5><b>Explore the Micro ecosystem</b></h5>
 		  <p>&nbsp;</p>
                   <form class="search shadow-sm">
 	              <input type="text" class="form-control" id="search" placeholder="Search">
