--- a/home/web/html/index.html
+++ b/home/web/html/index.html
@@ -187,7 +187,7 @@
 				<a href="https://github.com/micro/micro" class="text-dark"><b>MICRO</b></a>
 				<span style="margin-left: 10px; vertical-align:middle;"><a class="github-button" href="https://github.com/micro/micro" data-show-count="true" aria-label="Star micro/micro on GitHub" data-size="large">Star</a></span>
 			    </h5>
-                            <h5>The distributed service runtime for the Cloud and beyond</h5>
+                            <h5>The distributed systems runtime for the Cloud and beyond</h5>
                             <br>
                             <p style="color: #565b73;">
 				Build, run and manage microservice applications with ease. Micro provides a platform 
