--- a/home/web/html/index.html
+++ b/home/web/html/index.html
@@ -93,7 +93,7 @@
                     <div class="row">
                         <div class="col-md-10 offset-md-1">
 			    <center>
-				<h3><b class="bold";>M3O</b></h3>
+				<h3><a class="bold text-dark" href="https://m3o.micro.mu">M3O</a></h3>
 				<small><i>(pronounced "em-3-oh")</i></small>
 				<p style="margin-top:5px;">A microservices platform</p>
 				<br>
