update blurbs in home

--- a/home/web/html/index.html
+++ b/home/web/html/index.html
@@ -52,7 +52,7 @@
 			</h2>
                         <p class="col-md-11 description" style="font-size: calc(1em + 0.5vw); padding: 10px 0 25px 0; max-width: 630px;">
 			  Micro empowers developers to build, share and collaborate on distributed systems in the cloud and beyond 
-			  without having to manage the infrastructure.
+			  without having to think about the infrastructure.
                         </p>
 			<p><b>Micro</b> is built with a <b>developer first focus</b> 👨‍💻.</p>
 
@@ -156,7 +156,7 @@
 				<a href="https://go-micro.dev" class="text-dark"><b>GO MICRO</b></a>
 				<span style="margin-left: 10px; vertical-align: middle;"><a class="github-button" href="https://github.com/micro/go-micro" data-show-count="true" aria-label="Star micro/go-micro on GitHub" data-size="large">Star</a></span>
 			    </h5>
-                            <h5>A Go microservices development framework</h5>
+                            <h5>A Go distributed systems development framework</h5>
                             <br>
                             <p style="color: #565b73;">
 				Go Micro is a drastically simpler way to build microservices and distributed systems in any environment.
