--- a/home/web/html/index.html
+++ b/home/web/html/index.html
@@ -156,7 +156,7 @@
 				<a href="https://go-micro.dev" class="text-dark"><b>GO MICRO</b></a>
 				<span style="margin-left: 10px; vertical-align: middle;"><a class="github-button" href="https://github.com/micro/go-micro" data-show-count="true" aria-label="Star micro/go-micro on GitHub" data-size="large">Star</a></span>
 			    </h5>
-                            <h5>A Go distributed systems development framework</h5>
+                            <h5>A distributed systems development framework</h5>
                             <br>
                             <p style="color: #565b73;">
 				Go Micro is a drastically simpler way to build microservices and distributed systems in any environment.
