--- a/home/web/html/pricing/index.html
+++ b/home/web/html/pricing/index.html
@@ -86,23 +86,20 @@
 			<a class="btn btn-lg btn-light btn-shadow" href="https://account.micro.mu/">Signup now</a>
                     </center>
                     </div>
-<!--
                     <div class="col-md-4">
                     <center class="pricing">
 			<h3>Teams</h3>
-			<p>Fully managed Micro as a Service. Let us deal with the platform so you
-			can focus on building the products.</p>
+			<p>Fully managed Micro as a Service. Let us deal with the platform so you can focus on building the products.</p>
 			<ul class="list-unstyled">
 			  <li><i class="fa fa-check"></i> Micro as a Service</li>
 			  <li><i class="fa fa-check"></i> Private environment</li>
 			  <li><i class="fa fa-check"></i> Private services</li>
 			</ul>
-			<h1>Coming soon</h1>
-			<p>Get in touch</p>
+			<h1>$45</h1>
+			<p>Per user / month</p>
 			<a class="btn btn-lg btn-light btn-shadow"  href="mailto:sales@micro.mu">Contact Us</a>
                     </center>
                     </div>
--->
 		  </div>
                 </div>
             </div>
