--- a/home/web/html/index.html
+++ b/home/web/html/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Micro is the simplest path to services">
+        <meta name="description" content="Micro is a development platform for cloud services">
         <title>Micro - The fastest way to build services in the Cloud and beyond</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -48,7 +48,7 @@
             	    <div class="row">
             	      <div class="col-lg-7">
                         <h2 class="tagline" style="font-weight: bold;">
-				The fastest way to build cloud native services 🌩️
+				The development platform for cloud services 🌩️
 			</h2>
                         <p class="col-md-11 description" style="font-size: calc(1em + 0.5vw); padding: 10px 0 25px 0; max-width: 630px;">
 			  Micro empowers developers to build, share and collaborate on services in the cloud and beyond 
