--- a/home/web/html/index.html
+++ b/home/web/html/index.html
@@ -48,7 +48,7 @@
             	    <div class="row">
             	      <div class="col-lg-7">
                         <h2 class="tagline" style="font-weight: bold;">
-				The development platform for cloud services 🌩️
+				The developer platform for cloud services 🌩️
 			</h2>
                         <p class="col-md-11 description" style="font-size: calc(1em + 0.5vw); padding: 10px 0 25px 0; max-width: 630px;">
 			  Micro empowers developers to build, share and collaborate on services in the cloud and beyond 
