--- a/home/web/html/about/index.html
+++ b/home/web/html/about/index.html
@@ -172,7 +172,7 @@
         <div class="footer">
             <center>
                 <ul class="list-inline">
-                    <li class="list-inline-item">&copy; 2019 Micro Services Inc.</li>
+                    <li class="list-inline-item">&copy; 2020 Micro Services, Inc.</li>
                     <li class="list-inline-item"><a href="https://micro-services.slack.com"><i class="fa fa-slack"></i></a></li>
                     <li class="list-inline-item"><a href="https://github.com/micro"><i class="fa fa-github"></i></a></li>
                     <li class="list-inline-item"><a href="https://twitter.com/microhq"><i class="fa fa-twitter"></i></a></li>
