--- a/home/web/html/index.html
+++ b/home/web/html/index.html
@@ -34,8 +34,8 @@
                     <li class="nav-item"><a href="/blog/" class="nav-link">Blog</a></li>
                     <li class="nav-item"><a href="/community" class="nav-link">Community</a></li>
                     <li class="nav-item"><a href="/docs" class="nav-link">Docs</a></li>
+                    <li class="nav-item"><a href="https://github.com/micro" class="nav-link">GitHub</a></li>
                     <li class="nav-item"><a href="/signup" class="nav-link">Signup</a></li>
-                    <li class="nav-item"><a href="https://github.com/micro" class="nav-link">Tools</a></li>
                    </ul>
                 </div>
                 </nav>
