--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div class="col-md-10 offset-md-1 main">
 <center>
 <h4 class="m3o"><b>M3O</b></h4>
-<h3 class="col-md-8">Build, share and collaborate on Micro services in the Cloud</p>
+<h3 class="col-md-8">The development platform for Cloud services</p>
 </center>
 <div class="row" style="padding-top: 50px;">
 <div class="col-md-6" style="text-align: justify;">
