--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ an environment in which we can realise the true potential of the cloud.</p>
 <li class="list-inline-item"><a href="https://slack.micro.mu"><i class="fab fa-slack"></i></a></li>
 <li class="list-inline-item"><a href="https://github.com/micro/services"><i class="fab fa-github"></i></a></li>
 <li class="list-inline-item"><a href="https://twitter.com/m3oservices"><i class="fab fa-twitter"></i></a></li>
-<li class="list-inline-item"><a href="/cdn-cgi/l/email-protection#aec6cbc2c2c1eec3c7cddcc180c3db"><i class="far fa-envelope"></i></a></li>
+<li class="list-inline-item"><a href="mailto:contact@micro.mu"><i class="far fa-envelope"></i></a></li>
 </ul>
 </center>
 </div>
