Update twitter link

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@ an environment in which we can realise the true potential of the cloud.</p>
 <ul class="list-inline">
 <li class="list-inline-item">&copy; 2020 Micro Services, Inc.</li>
 <li class="list-inline-item"><a href="https://slack.micro.mu"><i class="fab fa-slack"></i></a></li>
-<li class="list-inline-item"><a href="https://github.com/micro/services"><i class="fab fa-github"></i></a></li>
-<li class="list-inline-item"><a href="https://twitter.com/m3oservices"><i class="fab fa-twitter"></i></a></li>
+<li class="list-inline-item"><a href="https://github.com/micro"><i class="fab fa-github"></i></a></li>
+<li class="list-inline-item"><a href="https://twitter.com/microhq"><i class="fab fa-twitter"></i></a></li>
 <li class="list-inline-item"><a href="mailto:contact@micro.mu"><i class="far fa-envelope"></i></a></li>
 </ul>
 </center>
