Add border-left to signup form

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div class="row">
 <div class="col-md-10 offset-md-1 main">
 <div class="row">
-	<div class="col-md-7" style="text-align: justify;">
+	<div class="col-md-6" style="text-align: justify;">
 		<h2 style="margin-bottom: 20px; font-size: 3em; font-weight: bold; text-align: left;">A cloud native platform built for developers</h2>
 		<p>
 		Micro is a cloud native development platform. A fully managed service which enables developers 
@@ -67,7 +67,7 @@
 		an environment in which we can realise the true potential of the cloud.</p>
 		<br>
 	</div>
-	<div class="col-md-4 offset-md-1">
+	<div class="col-md-4 offset-md-1" style="border-left: 2px solid #f5f5f5;">
 		<h2 class="center" style="margin-top: 85px;">Join the waitlist</h2>
 		<p>
 		<div style="padding: 10px 20% 0 20%; text-align: center; margin: 20px;"><img src="https://micro.mu/images/tri.png" style="width: 80px;" /></div>
